# tfm-procurewatch

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
config/: place_sources.json
data/processed/: agent4_evaluation_report.json  agent4_evaluation_report.md
data/processed_sample/: agent1_contract_key_coverage.parquet  agent1_contract_key_coverage_preview.csv  agent1_data_quality_summary.json  agent1_matching_candidates_preview.csv  agent1_matching_diagnostics.json  agent1_run_report.json  agent1_source_coverage_analysis.json  agent1_source_coverage_analysis.md  agent2_contracts_canonical.parquet  agent2_contracts_canonical_preview.csv  agent2_contracts_canonical_schema.json  contracts_boe.parquet  contracts_boe_cpv71_preview.csv  contracts_opentender_2024_cpv71.parquet  contracts_opentender_2024_cpv71_preview.csv  contracts_opentender_2024_quality.json  contracts_place_cpv71.parquet  contracts_place_cpv71_preview.csv  contracts_place_quality.json  data_quality_report.json
docs/: ARQUITECTURA_BATCH_Y_GRAFOS.md  BASE_MEMORIA_TFM.md  DEMO_MVP.md  ESTRATEGIA_PLACE_HACIENDA.md  GUIA_ENTREVISTA_TFM.md  MODELO_DATOS_ANALITICO.md  PLANIFICACION_TFM.md  PLAN_AGENTE1_PIPELINE.md  PLAN_AGENTE2_SCORING.md  PLAN_AGENTE3_GRAFOS.md  PLAN_CAPA_DATOS_AGENTES.md  PLAN_INGESTA_BATCH_AGENT1.md  README.md  RESULTADO_PIPELINE_BOE.md  SEGUIMIENTO_AGENT1.md  SEGUIMIENTO_AGENTES.md  STACK_TECNICO_PROYECTO.md
docs/00_vision/: HOJA_RUTA_FINAL_TFM_2026_06_24.md  STACK_TECNICO_PROYECTO.md
docs/01_arquitectura/: ARQUITECTURA_BATCH_Y_GRAFOS.md  PLAN_CAPA_DATOS_AGENTES.md
frontend/: agent3_demo.py  requirements.txt
legacy/: README.md
tests/: conftest.py  test_agent1.py  test_agent1_analytical_dataset.py  test_agent1_coverage_report.py  test_agent1_postgres.py  test_agent1_schema.py  test_agent2.py  test_agent2_postgres.py  test_agent3.py  test_agent4.py  test_batch.py  test_benchmark.py  test_boe_parser.py  test_boe_units.py  test_buyer_catalog.py  test_case_studies.py  test_cli.py  test_dashboard_temporal.py  test_opentender.py  test_settings.py
(+137 files in other folders)
